# zorse-lang--drop--busybox

./: .gitignore  CMakeLists.txt  CREDITS.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build.zx.mjs  package-lock.json  package.json  rome.json  test.cjs  test.js  test.ts  test.zx.mjs  tsconfig.json  webpack.all.mjs  webpack.config.js  webpack.std.mjs
.cargo/: config.toml
.github/workflows/: main.yml
.workflows/: main.yml
docs/: README.md
docs/interfaces/: BusyBoxRunOptions.md  DropRunOptions.md  RunOptions.md  Runner.md
modules/internal/: util.js
src/: builtins.c  builtins.h  builtins_crypto.c  builtins_io.c  builtins_js.h  doops.h  index.js  js_engine.h  lib.rs  main.c  main.rs  modules.h  transpiler.rs
src/event_loop/: mod.rs
src/internal_module/: mod.rs  sys.rs
src/misc/: .config  Makefile  em-shell.js
src/modules_js/: assert.js  buffer.js  chai.js.in  commonjs.js  crypto.js.in  encoding.js  events.js  fs.js  memfs.js.in  os.js  path.js  process.js  punycode.js  querystring.js  readline.js  stream.js  string_decoder.js  timers.js  tty.js  url.js  util.js  uvu.js.in  whatwg_url.js
src/modules_js/fmt/: printf.js
src/modules_js/fs/: promises.js
src/modules_js/internal/: assert.js  constants.js  errors.js  fs.js  normalize_encoding.js  options.js  tty.js  url.js  util.js  validators.js
src/modules_js/internal/assert/: assertion_error.js  calltracker.js
src/modules_js/internal/fs/: stream.js  utils.js
src/modules_js/internal/fs/cp/: cp-sync.js  cp.js
src/modules_js/internal/readline/: callbacks.js  emitKeypressEvents.js  interface.js  promises.js  utils.js
src/modules_js/internal/streams/: add-abort-signal.js  buffer_list.js  compose.js  destroy.js  duplex.js  end-of-stream.js  from.js  legacy.js  passthrough.js  pipeline.js  readable.js  state.js  transform.js  utils.js  writable.js
src/modules_js/internal/test/: binding.js
src/modules_js/internal/util/: colors.js  comparisons.js  debuglog.js  inspect.js  types.js
src/modules_js/internal_binding/: constants.js  util.js  uv.js
src/modules_js/stream/: consumers.js  promises.js
src/modules_js/timers/: promises.js
src/modules_js/util/: types.js
src/modules_rs/: mod.rs  sys.rs
src/npm/: bin.js  bin.ts  busybox.js  drop.js  index.d.ts  index.ts  lib.d.ts  lib.js  process.js
src/quickjs/: quickjs.c  quickjs.h  quickjs.patch  wapper.c  wapper.h
src/quickjs_sys/: mod.rs  modules.rs  resolver.rs  transpiler.rs
std/: crypto.js  memfs.js  zlib.js
